<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.hobbit</groupId>
	<artifactId>faceted-browsing-benchmark-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<hobbit-sdk.version>1.0.0-SNAPSHOT</hobbit-sdk.version>
		<slf4j.version>1.7.24</slf4j.version>
		<jena-sparql-api.version>3.8.0-1-SNAPSHOT</jena-sparql-api.version>

                <docker.mainClass>org.hobbit.sdk.main.MainDockerServiceLauncher</docker.mainClass>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<!-- <maven.compiler.source>9</maven.compiler.source> -->
		<!-- <maven.compiler.target>9</maven.compiler.target> -->
		<!-- <maven.compiler.release>9</maven.compiler.release> -->

		<!-- <task-generator.docker.repository>git.project-hobbit.eu:4567/gkatsibras/facetedbenchmarkcontroller</benchmark-controller.docker.repository> -->
		<!-- <benchmark-controller.docker.repository>git.project-hobbit.eu:4567/gkatsibras/facetedbenchmarkcontroller</benchmark-controller.docker.repository> -->
		<!-- <benchmark-controller.docker.repository>git.project-hobbit.eu:4567/gkatsibras/facetedbenchmarkcontroller</benchmark-controller.docker.repository> -->
	</properties>

	<modules>
		<module>faceted-browsing-benchmark-core</module>

		<module>faceted-browsing-benchmark-v1-parent</module>
		<module>faceted-browsing-benchmark-v2-parent</module>
	</modules>

	<dependencyManagement>
		<dependencies>

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-core</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<!-- <dependency> -->
			<!-- <groupId>org.aksw.jena-sparql-api</groupId> -->
			<!-- <artifactId>jena-sparql-api-utils</artifactId> -->
			<!-- <version>${jena-sparql-api.version}</version> -->
			<!-- </dependency> -->

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-mapper-core</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-mapper-proxy</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-query-containment</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-server-standalone</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.aksw.jena-sparql-api</groupId>
				<artifactId>jena-sparql-api-sparql-ext</artifactId>
				<version>${jena-sparql-api.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hobbit</groupId>
				<artifactId>faceted-browsing-benchmark-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hobbit</groupId>
				<artifactId>faceted-browsing-benchmark-v1-core</artifactId>
				<version>${project.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hobbit</groupId>
				<artifactId>faceted-browsing-benchmark-v2-core</artifactId>
				<version>${project.version}</version>
			</dependency>


			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-referencing</artifactId>
				<version>18.4</version>
			</dependency>

			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-epsg-hsql</artifactId>
				<version>18.4</version>
			</dependency>

			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-epsg-extension</artifactId>
				<version>18.4</version>
			</dependency>

			<dependency>
				<groupId>org.geotools</groupId>
				<artifactId>gt-api</artifactId>
				<version>18.4</version>
			</dependency>


			<dependency>
				<groupId>org.hobbit</groupId>
				<artifactId>hobbit-sdk-rdf</artifactId>
				<version>${hobbit-sdk.version}</version>
			</dependency>

			<dependency>
				<groupId>org.hobbit</groupId>
				<artifactId>hobbit-sdk-qpid7</artifactId>
				<version>${hobbit-sdk.version}</version>
			</dependency>

			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>4.12</version>
			</dependency>


		</dependencies>
	</dependencyManagement>
	<build>


		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.bsc.maven</groupId>
				<artifactId>maven-processor-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>build-helper-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>

			<plugins>

				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.0</version>
					<configuration>
						<source>${maven.compiler.source}</source>
						<target>${maven.compiler.target}</target>
						<compilerArgument>-proc:none</compilerArgument>
						<!-- https://discourse.hibernate.org/t/metamodel-usage-with-maven-and-intellij/487 -->
						<annotationProcessorPaths>
							<path>
								<groupId>org.hibernate</groupId>
								<artifactId>hibernate-jpamodelgen</artifactId>
								<version>5.3.6.Final</version>
							</path>
						</annotationProcessorPaths>
					</configuration>
				</plugin>

				<plugin>
					<groupId>org.bsc.maven</groupId>
					<artifactId>maven-processor-plugin</artifactId>
					<version>2.0.5</version>
					<executions>
						<execution>
							<id>process</id>
							<goals>
								<goal>process</goal>
							</goals>
							<phase>generate-sources</phase>
							<configuration>
								<processors>
									<processor>org.hibernate.jpamodelgen.JPAMetaModelEntityProcessor</processor>
								</processors>
							</configuration>
						</execution>
					</executions>
					<dependencies>
						<dependency>
							<groupId>org.hibernate</groupId>
							<artifactId>hibernate-jpamodelgen</artifactId>
							<version>5.3.6.Final</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>3.0.0</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>target/generated-sources/annotations</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>

				<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-shade-plugin</artifactId> 
					<version>2.4.3</version> <configuration> < !- - filter all the META-INF files 
					of other artifacts - - > <filters> <filter> <artifact>*:*</artifact> <excludes> 
					<exclude>META-INF/*.SF</exclude> <exclude>META-INF/*.DSA</exclude> <exclude>META-INF/*.RSA</exclude> 
					</excludes> </filter> </filters> <transformers> <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"> 
					<manifestEntries> <X-Compile-Source-JDK>${maven.compile.source}</X-Compile-Source-JDK> 
					<X-Compile-Target-JDK>${maven.compile.target}</X-Compile-Target-JDK> </manifestEntries> 
					</transformer> <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" 
					/> </transformers> </configuration> <executions> <execution> <phase>package</phase> 
					<goals> <goal>shade</goal> </goals> </execution> </executions> </plugin> -->


				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.0.0-M1</version>


					<!-- The spring based unit tests presently cannot configure properties 
						across all containers -->
					<configuration>
						<!-- VHOST no longer has to be set -->
						<!-- <systemPropertyVariables> -->
						<!-- <AMQP_VHOST>default</AMQP_VHOST> -->
						<!-- </systemPropertyVariables> -->
					</configuration>
				</plugin>

			</plugins>
		</pluginManagement>
	</build>

	<distributionManagement>
		<repository>
			<id>maven.aksw.internal</id>
			<name>AKSW Release Repository</name>
			<url>http://maven.aksw.org/repository/internal</url>
		</repository>

		<snapshotRepository>
			<id>maven.aksw.snapshots</id>
			<name>AKSW Snapshot Repository</name>
			<url>http://maven.aksw.org/repository/snapshots</url>
		</snapshotRepository>
	</distributionManagement>


	<repositories>
		<repository>
			<id>maven.aksw.internal</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/repository/internal</url>
		</repository>
		<repository>
			<id>maven.aksw.snapshots</id>
			<name>University Leipzig, AKSW Maven2 Repository</name>
			<url>http://maven.aksw.org/repository/snapshots</url>
		</repository>
		<repository>
			<id>Apache Repo</id>
			<name>Apache Repository</name>
			<url>https://repository.apache.org/content/repositories/releases/</url>
		</repository>
		<repository>
			<id>in-project-virtjdbc</id>
			<name>In Project Repo for VirtJDBC</name>
			<url>file://${project.basedir}/src/main/resources/lib</url>
		</repository>


		<!-- geotools repo from http://docs.geotools.org/latest/userguide/tutorial/quickstart/maven.html -->
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net repository</name>
			<url>http://download.java.net/maven/2</url>
		</repository>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>boundless</id>
			<name>Boundless Maven Repository</name>
			<url>http://repo.boundlessgeo.com/main</url>
		</repository>
	</repositories>

</project>
